# mycode

./: .gitattributes  .gitignore  go.mod  go.sum
golang/remosis/: main.go
graalvms/js-java/: package-lock.json  package.json  server.js
htmls/: sendCors.html
javabase/: build.gradle  gradle.properties  pom.xml
leetcode/: 278.first-bad-version.java  283.move-zeroes.java  290.word-pattern.java  Test.java  test.html
myGolangs/: go.mod  go.sum  main.go
myGolangs/arigth/: dijkstra.go  murmur.go  regextest.go
myGolangs/baseinterface/: inters.go
myGolangs/basic/: align.go  flags.go  fortest.go  loopproblem.go  pointer.go  semaphore.go  singleflight.go  sorter.go  testDef.go
myGolangs/codeBetter/: test.go
myGolangs/concurrency/: atomicTest.go  channels.go
myGolangs/context/: withErr.go
myGolangs/error/: err3.go
myGolangs/generic/: Tree.go  explain.go  lazy.go
myGolangs/gorutine/: blockwhenfor.go  main.go
mytest/: bolt.db  build.yml  go.mod  go.sum
php/: ExecuteNoSubscriptionDevicePushMessage.php
pythons/: llama_chat.py
rusts/study_rust/: Cargo.toml  build.rs
rusts/study_rust/src/: main.rs
rusts/study_rust/src/base_concept/: array_my.rs  base.rs  cells.rs  custom_closure.rs  iters.rs
rusts/study_rust/src/c/: epoll_stampede.cpp  epoll_test.cpp
rusts/study_rust/src/dyn_struct/: dyn_test.rs
rusts/study_rust/src/examples/: example.rs
rusts/study_rust/src/indexes/: base.rs
rusts/study_rust/src/mem_ordering/: order_test.rs
rusts/study_rust/src/ownshiptest/: mod.rs
rusts/study_rust/src/tokio_test/: mod.rs  my_tokio.rs
(+306 files in other folders)
