[package]
name = "study_rust"
version = "0.1.0"
authors = ["muqi.lmq <muqi.lmq@autonavi.com>"]
edition = "2021"

[profile.dev]
debug = true
opt-level = 0

[dependencies]
ndarray = "0.12.1"
rayon = "1.0.3"
structopt = "0.3.22"
exitfailure = "0.5.1"
serde = "1.0.126"
serde_json = "1.0.64"
serde_derive = "1.0.126"
#reqwest = "0.11.4"
reqwest = { version = "0.11.4", features = ["json"] }
tokio = { version = "1", features = ["full"] }
#hammer = { version = "0.5.0"}
#color = { git = "https://github.com/bjz/color-rs" }
#geometry = { path = "crates/geometry" }
