[workspace]
members=["cargo_new_lib","cargo_two"]
[package]
name = "study_rust"
build ="build.rs"
version = "0.1.0"
authors = ["muqi.lmq <muqi.lmq@autonavi.com>"]
edition = "2021"

[profile.dev]
debug = true
opt-level = 0
[profile.release]
panic = 'abort'
[build-dependencies]
rand = "0.7.2"

[dependencies]
ndarray = "0.12.1"
rayon = "1.0.3"
structopt = "0.3.22"
exitfailure = "0.5.1"
serde = "1.0.126"
serde_json = "1.0.64"
serde_derive = "1.0.126"
#reqwest = "0.11.4"
reqwest = { version = "0.11.4", features = ["json"] }
tokio = { version = "1", features = ["full"] }
num-bigint="0.2.2"
num-traits="0.2.8"
http="0.1.18"
list = "0.1.3"
sourcemap = "5.0.0"
pin-project = "0.4"
#hammer = { version = "0.5.0"}
#color = { git = "https://github.com/bjz/color-rs" }
#geometry = { path = "crates/geometry" }
